--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>وحدة خريجي الحاسبات والذكاء الاصطناعي - التصميم الشامل</title>
+    <title>وحدة خريجي جامعة بنى سويف</title>
 
     <style>
         /* الأساسيات وإعادة الضبط */
@@ -246,7 +246,7 @@
     
     <header class="main-header">
         <div class="logo">
-            <span>خريجي الحاسبات والذكاء الاصطناعي</span>
+            <span>خريجي جامعة بنى سويف</span>
         </div>
         <nav class="main-nav">
             <a href="#hero">الرئيسية</a>
@@ -263,7 +263,7 @@
     <section class="hero-section" id="hero">
         <div class="hero-content">
             <h1>شراكة مستدامة نحو الريادة التقنية</h1>
-            <p>انضم إلى شبكة خريجي الكلية وابقَ على اطلاع بأحدث الفرص والفعاليات في مجال الذكاء الاصطناعي والحوسبة.</p>
+            <p>انضم إلى شبكة خريجي الجامعة وابقَ على اطلاع بأحدث الفرص والفعاليات في مجالات مميزه.</p>
             <a href="#alumni-form-section" class="btn secondary">سجل بياناتك الآن!</a>
         </div>
     </section>
@@ -401,6 +401,10 @@
                         <label for="expertise">مجالات الخبرة التي يمكن الإرشاد فيها (اختيار متعدد):</label>
                         <select id="expertise" name="expertise" multiple size="4">
                             <option value="career-path">التخطيط للمسار الوظيفي</option>
+                           <option value="career-path">المحاسبة</option>
+                           <option value="career-path">الأعلام</option>
+                           <option value="career-path">الأستشارات القانونية</option>
+
                             <option value="ai-ml">الذكاء الاصطناعي وتعلم الآلة</option>
                             <option value="cyber-sec">الأمن السيبراني والهاكينغ الأخلاقي</option>
                         </select>
@@ -430,7 +434,7 @@
     <div style="background-color: #f4f4f9; height: 50px;"></div>
 
     <footer class="main-footer">
-        <p>&copy; 2025 وحدة خريجي كلية الحاسبات والذكاء الاصطناعي | <a href="#">سياسة الخصوصية</a></p>
+        <p>&copy; 2026 وحدة خريجي جامعة بنى سويف | <a href="#">سياسة الخصوصية</a></p>
     </footer>
 
     <script>
@@ -483,4 +487,5 @@
         });
     </script>
 </body>
+
 </html>
